{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 33,
  "lineage": "f4114203-65cf-4014-4bf2-86d7a1c680ed",
  "resources": [
    {
      "module": "module.keycloak",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "keycloak_ingress",
      "provider": "module.keycloak.provider[\"registry.opentofu.org/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/keycloak-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "keycloak-ingress",
                "namespace": "default",
                "resource_version": "1363",
                "uid": "35e5670a-2dd0-4cc8-bcd6-72adf4966b5e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "auth.localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "keycloak",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.kind_cluster.daato",
            "module.keycloak.kubernetes_deployment.keycloak_deployment",
            "module.keycloak.kubernetes_service.keycloak_service"
          ]
        }
      ]
    },
    {
      "module": "module.keycloak",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "keycloak_service",
      "provider": "module.keycloak.provider[\"registry.opentofu.org/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/keycloak",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "keycloak_service"
                },
                "name": "keycloak",
                "namespace": "default",
                "resource_version": "1095",
                "uid": "89d23df7-6b0e-40c5-90d8-6a157ace901c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.3.189",
                "cluster_ips": [
                  "10.96.3.189"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "keycloak"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.cluster.kind_cluster.daato",
            "module.keycloak.kubernetes_deployment.keycloak_deployment"
          ]
        }
      ]
    },
    {
      "module": "module.react",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "react_ingress",
      "provider": "module.react.provider[\"registry.opentofu.org/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/react-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "react-ingress",
                "namespace": "default",
                "resource_version": "1361",
                "uid": "953d2a00-3f9e-4874-bd18-f37895a3999e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "app.localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "react",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.kind_cluster.daato",
            "module.react.kubernetes_deployment.react_deployment",
            "module.react.kubernetes_service.react_service"
          ]
        }
      ]
    },
    {
      "module": "module.react",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "react_service",
      "provider": "module.react.provider[\"registry.opentofu.org/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/react",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "react_service"
                },
                "name": "react",
                "namespace": "default",
                "resource_version": "899",
                "uid": "7deb9633-aa84-44f7-8c1f-4c182fdab1f1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.120.198",
                "cluster_ips": [
                  "10.96.120.198"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31038,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "react"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.cluster.kind_cluster.daato",
            "module.react.kubernetes_deployment.react_deployment"
          ]
        }
      ]
    }
  ]
}